--- a/CollectionTester/pom.xml
+++ b/CollectionTester/pom.xml
@@ -50,6 +50,11 @@
             <version>18.0</version>
         </dependency>
 
+        <dependency>
+            <groupId>jstl</groupId>
+            <artifactId>jstl</artifactId>
+            <version>1.2</version>
+        </dependency>
 
         <dependency>
             <groupId>org.springframework</groupId>
